feat: add product to cart API
